--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
   "dependencies": {
     "expo": "^30.0.1",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+	"react-native-contacts": "^2.2.4",
+    "react-native-fbsdk": "^0.8.0",
+    "react-native-image-picker": "^0.26.10",
+    "react-native-slider": "^0.11.0",
+    "react-navigation": "^2.16.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
